[gd_scene load_steps=22 format=3 uid="uid://da8x36hcorblr"]

[ext_resource type="Script" path="res://scenes/menu/main_menu/main_menu.gd" id="1_e3kcb"]
[ext_resource type="PackedScene" uid="uid://dhf0slbx1ay6e" path="res://scenes/settings/settings.tscn" id="2_4yo52"]
[ext_resource type="PackedScene" uid="uid://dbt5dv3jetjqb" path="res://scenes/menu/clouds/clouds.tscn" id="2_nnb4s"]
[ext_resource type="Texture2D" uid="uid://c8ba1w1ycn4km" path="res://assets/menu/main_menu/building-layer.png" id="2_odpfy"]
[ext_resource type="Texture2D" uid="uid://diewiydxjkmnu" path="res://assets/menu/main_menu/sky-layer.png" id="3_8f4w8"]
[ext_resource type="Texture2D" uid="uid://k6e7xb88ta60" path="res://assets/others/clouds/cloud_1.png" id="3_wtqis"]
[ext_resource type="Texture2D" uid="uid://cdxt34wiwp1fa" path="res://assets/experimental/menu/main_menu/play_button.png" id="3_ykw6j"]
[ext_resource type="Texture2D" uid="uid://dg1dgqk0yyd1q" path="res://assets/experimental/menu/main_menu/settings_button.png" id="4_tkix5"]
[ext_resource type="Texture2D" uid="uid://mig33mly5623" path="res://assets/others/clouds/cloud_2.png" id="4_yvgs0"]
[ext_resource type="Texture2D" uid="uid://5uqw1hdcqxry" path="res://assets/experimental/menu/main_menu/exit_button.png" id="5_0xuuv"]
[ext_resource type="Script" path="res://scenes/menu/clouds/cloud.gd" id="5_bpluu"]
[ext_resource type="Texture2D" uid="uid://0j7gugsbcymb" path="res://assets/others/clouds/cloud_3.png" id="5_ioobx"]
[ext_resource type="Texture2D" uid="uid://b4ey6id0drkym" path="res://assets/menu/main_menu/title.png" id="10_0don7"]
[ext_resource type="Texture2D" uid="uid://d28y7j7p82ga1" path="res://assets/experimental/menu/main_menu/play_button-pressed.png" id="12_5scym"]
[ext_resource type="Texture2D" uid="uid://x4kp4nelnqib" path="res://assets/experimental/menu/main_menu/settings_button-pressed.png" id="14_3cy33"]
[ext_resource type="Texture2D" uid="uid://bqwtar24nb8lm" path="res://assets/experimental/menu/main_menu/exit_button-pressed.png" id="16_d7u2r"]

[sub_resource type="Animation" id="Animation_crwdl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainUI/Title:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Settings:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1000, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MainUI/HBoxContainer:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(334, 422)]
}

[sub_resource type="Animation" id="Animation_s22bl"]
resource_name = "exit_settings_pressed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Settings:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1000, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainUI/Title:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -500), Vector2(0, -5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MainUI/HBoxContainer:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(334, 1000), Vector2(334, 422)]
}

[sub_resource type="Animation" id="Animation_ldtx6"]
resource_name = "settings_pressed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Settings:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1000, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainUI/Title:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -5), Vector2(0, -500)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MainUI/HBoxContainer:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(334, 422), Vector2(334, 1000)]
}

[sub_resource type="Animation" id="Animation_cyev8"]
resource_name = "title_idle_animation"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainUI/Title:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.566667, 0.866667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -5), Vector2(0, 0), Vector2(0, 5), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tckpc"]
_data = {
"RESET": SubResource("Animation_crwdl"),
"exit_settings_pressed": SubResource("Animation_s22bl"),
"settings_pressed": SubResource("Animation_ldtx6"),
"title_idle_animation": SubResource("Animation_cyev8")
}

[node name="MainMenu" type="Node2D"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
position = Vector2(0, 0)
rotation = 0.0
scale = Vector2(1, 1)
skew = 0.0
script = ExtResource("1_e3kcb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tckpc")
}

[node name="Settings" parent="." instance=ExtResource("2_4yo52")]
z_index = 2
position = Vector2(-1000, 0)

[node name="Clouds" parent="." instance=ExtResource("2_nnb4s")]
position = Vector2(1435, 112)

[node name="Cloud1" type="Sprite2D" parent="Clouds"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_wtqis")
script = ExtResource("5_bpluu")

[node name="Cloud2" type="Sprite2D" parent="Clouds"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("4_yvgs0")
script = ExtResource("5_bpluu")

[node name="Cloud3" type="Sprite2D" parent="Clouds"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("5_ioobx")
script = ExtResource("5_bpluu")

[node name="Cloud4" type="Sprite2D" parent="Clouds"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("5_ioobx")
script = ExtResource("5_bpluu")

[node name="Cloud5" type="Sprite2D" parent="Clouds"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("5_ioobx")
script = ExtResource("5_bpluu")

[node name="Cloud6" type="Sprite2D" parent="Clouds"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("5_ioobx")
script = ExtResource("5_bpluu")

[node name="Cloud7" type="Sprite2D" parent="Clouds"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_wtqis")
script = ExtResource("5_bpluu")

[node name="Cloud8" type="Sprite2D" parent="Clouds"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("4_yvgs0")
script = ExtResource("5_bpluu")

[node name="Cloud9" type="Sprite2D" parent="Clouds"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("5_ioobx")
script = ExtResource("5_bpluu")

[node name="Cloud10" type="Sprite2D" parent="Clouds"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("5_ioobx")
script = ExtResource("5_bpluu")

[node name="Cloud11" type="Sprite2D" parent="Clouds"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("5_ioobx")
script = ExtResource("5_bpluu")

[node name="Cloud12" type="Sprite2D" parent="Clouds"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_wtqis")
script = ExtResource("5_bpluu")

[node name="Cloud13" type="Sprite2D" parent="Clouds"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("4_yvgs0")
script = ExtResource("5_bpluu")

[node name="Cloud14" type="Sprite2D" parent="Clouds"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("5_ioobx")
script = ExtResource("5_bpluu")

[node name="Cloud15" type="Sprite2D" parent="Clouds"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("5_ioobx")
script = ExtResource("5_bpluu")

[node name="Cloud16" type="Sprite2D" parent="Clouds"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("5_ioobx")
script = ExtResource("5_bpluu")

[node name="Cloud17" type="Sprite2D" parent="Clouds"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("5_ioobx")
script = ExtResource("5_bpluu")

[node name="Cloud18" type="Sprite2D" parent="Clouds"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("5_ioobx")
script = ExtResource("5_bpluu")

[node name="Background" type="Node2D" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
position = Vector2(0, 0)
rotation = 0.0
scale = Vector2(1, 1)
skew = 0.0
script = null

[node name="Buildings" type="Sprite2D" parent="Background"]
z_index = 1
position = Vector2(585, 323)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_odpfy")

[node name="Skies" type="Sprite2D" parent="Background"]
z_index = -1
position = Vector2(583, 320)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_8f4w8")

[node name="MainUI" type="Node2D" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
position = Vector2(0, 0)
rotation = 0.0
scale = Vector2(1, 1)
skew = 0.0
script = null

[node name="Title" type="Sprite2D" parent="MainUI"]
z_index = 1
position = Vector2(631, 254)
scale = Vector2(2, 1.998)
texture = ExtResource("10_0don7")

[node name="HBoxContainer" type="HBoxContainer" parent="MainUI"]
z_index = 1
offset_left = 334.0
offset_top = 422.0
offset_right = 869.0
offset_bottom = 603.0
alignment = 1

[node name="Play" type="TextureButton" parent="MainUI/HBoxContainer"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 2
auto_translate_mode = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 0)
layout_direction = 0
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 1
size_flags_stretch_ratio = 1.0
localize_numeral_system = true
tooltip_text = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 2
mouse_filter = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
disabled = false
toggle_mode = false
button_pressed = false
action_mode = 1
button_mask = 1
keep_pressed_outside = false
button_group = null
shortcut = null
shortcut_feedback = true
shortcut_in_tooltip = true
texture_normal = ExtResource("3_ykw6j")
texture_pressed = ExtResource("12_5scym")
texture_hover = null
texture_disabled = null
texture_focused = null
texture_click_mask = null
ignore_texture_size = false
stretch_mode = 2
flip_h = false
flip_v = false
script = null

[node name="Settings" type="TextureButton" parent="MainUI/HBoxContainer"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 2
auto_translate_mode = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 0)
layout_direction = 0
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 1
size_flags_stretch_ratio = 1.0
localize_numeral_system = true
tooltip_text = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 2
mouse_filter = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
disabled = false
toggle_mode = false
button_pressed = false
action_mode = 1
button_mask = 1
keep_pressed_outside = false
button_group = null
shortcut = null
shortcut_feedback = true
shortcut_in_tooltip = true
texture_normal = ExtResource("4_tkix5")
texture_pressed = ExtResource("14_3cy33")
texture_hover = null
texture_disabled = null
texture_focused = null
texture_click_mask = null
ignore_texture_size = false
stretch_mode = 2
flip_h = false
flip_v = false
script = null

[node name="Exit" type="TextureButton" parent="MainUI/HBoxContainer"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 2
auto_translate_mode = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 0)
layout_direction = 0
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 1
size_flags_stretch_ratio = 1.0
localize_numeral_system = true
tooltip_text = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 2
mouse_filter = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
disabled = false
toggle_mode = false
button_pressed = false
action_mode = 1
button_mask = 1
keep_pressed_outside = false
button_group = null
shortcut = null
shortcut_feedback = true
shortcut_in_tooltip = true
texture_normal = ExtResource("5_0xuuv")
texture_pressed = ExtResource("16_d7u2r")
texture_hover = null
texture_disabled = null
texture_focused = null
texture_click_mask = null
ignore_texture_size = false
stretch_mode = 2
flip_h = false
flip_v = false
script = null

[connection signal="pressed" from="MainUI/HBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MainUI/HBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MainUI/HBoxContainer/Exit" to="." method="_on_exit_pressed"]
